<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".navigation.ui.EntryFragment">

    <data></data>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/entry_content_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"/>

</layout>