<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".navigation.ui.NavigatorFragment">

    <data>

        <variable
            name="fragment"
            type="android.support.v4.app.Fragment"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/menu_bar"
            style="@style/MenuBar"/>

        <FrameLayout
            android:id="@+id/navigator_content_fl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">

            <include layout="@layout/layout_loading"/>
        </FrameLayout>
    </LinearLayout>
</layout>