...
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".home.MainActivity">

    <data class="AppBarLayoutBinding"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <FrameLayout
            android:id="@+id/app_activity_root_layout"
...
