<resources>
    <string name="app_name">Navigator Demo</string>
    <string name="home_url">https://www.mytoys.de</string>
    <string name="navi_url">https://mytoysiostestcase1.herokuapp.com/</string>
    <string name="main_menu">Menu</string>
    <string name="loading">Loading…</string>
    <string name="navigate_up">Navigate up</string>
    <string name="offline">You are offline. Using last cached data.</string>
    <string name="mobile_network">You are using mobile network. Using last cached data by last caching.</string>
    <string name="forced_loading">The mandatory refreshing for data.</string>
</resources>
